--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
     "react-window": "^1.8.10",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
