--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
+    "react-toggle-slider": "^0.4.1",
     "react-window": "^1.8.10",
     "swr": "^2.2.5",
     "zustand": "^5.0.1"
