--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "@types/react-window": "^1.8.8",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
+    "jsdom": "^25.0.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
@@ -29,6 +31,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -42,6 +46,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.5"
+    "vite": "^5.4.5",
+    "vitest": "^2.1.8"
   }
 }
