--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-window": "^1.8.8",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
+    "eventemitter3": "^5.0.1",
     "jsdom": "^25.0.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
